--- a/carshop.html
+++ b/carshop.html
@@ -9,7 +9,7 @@
 	<script src="js/angular.min.js"></script>
 	<script src="js/demoApp.js"></script>
 	<script src="js/dataService.js"></script>
-	<script src="js/carController.js"></script>
+	<script src="js/allController.js"></script>
 </head>
 
 	<body ng-controller="carController as demo">
