修改购物车功能
1、购物车与商品详情数组分开建立函数
等等

--- a/market/market.html
+++ b/market/market.html
@@ -15,7 +15,7 @@
                     <div class="del_con">
                         <p class="title"><a href=""><font>{{item.name}}</font>{{item.describe}}</a></p>
                         <p class="money"><font>￥{{item.price}}</font><b>库存{{item.inventory}}件</b>
-                            <span ng-click="market.select($index)"><img ng-click="market.add($index)" src="images/shopcar.png"></span>
+                            <span ng-click="market.addInventory($index)"><img ng-click="market.addGood($index)" src="images/shopcar.png"></span>
                         </p>
                     </div>
                 </li>
