修改文件名称顺序
1、命名规范化, controller 的名字, 它的简称别名, 所在的文件名一致

--- a/market/market.html
+++ b/market/market.html
@@ -1,4 +1,4 @@
-<div ng-controller="goodsController as market">
+<div ng-controller="marketController as market">
     <div class="head_info">
         <a href="#" class="head_info_return"><img src="images/head_returnIcon.png" /></a>
         <span>商品详情</span>
