--- a/carshop.html
+++ b/carshop.html
@@ -7,9 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/goodscar.css">
 	<script src="js/angular.min.js"></script>
-	<script src="js/demoApp.js"></script>
+	<script src="js/ShopApp.js"></script>
 	<script src="js/dataService.js"></script>
-	<script src="js/allController.js"></script>
+	<script src="js/cartlController.js"></script>
 </head>
 
 	<body ng-controller="carController as demo">
