--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" type="text/css" href="css/goodscar.css">
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-ui-router.min.js"></script>
-    <script src="js/demoApp.js"></script>
+    <script src="js/ShopApp.js"></script>
     <script src="js/dataService.js"></script>
-    <script src="js/goodsController.js"></script>
-    <script src="js/allController.js"></script>
+    <script src="js/marketController.js"></script>
+    <script src="js/cartlController.js"></script>
 </head>
 
-<body ng-controller="allController as demo">
+<body ng-controller="cartlController as cart">
     <ui-view></ui-view>
 </body>
 
