--- a/carshop.html
+++ b/carshop.html
@@ -9,7 +9,7 @@
 	<script src="js/angular.min.js"></script>
 	<script src="js/ShopApp.js"></script>
 	<script src="js/dataService.js"></script>
-	<script src="js/cartlController.js"></script>
+	<script src="js/cartController.js"></script>
 </head>
 
 	<body ng-controller="carController as demo">
