--- a/market/market.html
+++ b/market/market.html
@@ -32,7 +32,7 @@
             共{{market.data.totalCount}}件，不包含运费
         </div>
         <div class="settlement_right">
-            <a ng-click="market.gotoCart()"><input type="button" value="去购物车结算" /></a>
+            <a ng-click="cart.gotoCart()"><input type="button" value="去购物车结算" /></a>
         </div>
     </div>
     <!--结算信息 end-->
