--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <script src="js/ShopApp.js"></script>
     <script src="js/dataService.js"></script>
     <script src="js/marketController.js"></script>
-    <script src="js/cartlController.js"></script>
+    <script src="js/cartController.js"></script>
 </head>
 
-<body ng-controller="cartlController as cart">
+<body ng-controller="cartController as cart">
     <ui-view></ui-view>
 </body>
 
