删除style.css，修改cart
1、cart界面使用了错误数组

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -13,7 +13,7 @@
     </div>
     <div class="main_con_goods">
         <ul>
-            <li ng-repeat="item in cart.newGood"><!--ng-repeat="item1 in data"-->
+            <li ng-repeat="item in cart.selectGoods"><!--ng-repeat="item1 in data"-->
                 <span class="circle"></span>
                 <img src="images/goodscar_pic1.png">
                 <div class="del_con">
