修改价钱计算
修改价钱，件数总计

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -34,8 +34,8 @@
 <!--结算信息 start-->
 <div class="settlement">
     <div class="settlement_left">
-        <font class="zongji">总计：</font><font class="money">￥{{cart.data.carTotalAmount}}</font><br />
-        共{{cart.data.carTotalCount}}件，不包含运费
+        <font class="zongji">总计：</font><font class="money">￥{{cart.data.totalAmount}}</font><br />
+        共{{cart.data.totalCount}}件，不包含运费
     </div>
     <div class="settlement_right">
         <input type="button" value="下订单" />
