--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
 <body ng-controller="cartController as cart">
     <ui-view></ui-view>
 </body>
-npm install --save eol@0.4.0
+npm install --save fs@0.0.2
 </html>
