npm install --save gulp-load-plugins@0.8.1

--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
 <body ng-controller="cartController as cart">
     <ui-view></ui-view>
 </body>
-npm install --save gulp-if@1.2.5
+npm install --save gulp-load-plugins@0.8.1
 </html>
