npm install --save gulp-rename@1.2.0

--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
 <body ng-controller="cartController as cart">
     <ui-view></ui-view>
 </body>
-npm install --save gulp-minify-html@1.0.1
+npm install --save gulp-rename@1.2.0
 </html>
