--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
 <body ng-controller="cartController as cart">
     <ui-view></ui-view>
 </body>
-npm install --save gulp-rename@1.2.0
+npm install --save gulp-replace@0.5.3
 </html>
