--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
 <body ng-controller="cartController as cart">
     <ui-view></ui-view>
 </body>
-npm install --save gulp-zip@2.0.3
+npm install --save node-json-minify@0.1.3-a
 </html>
