--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
 <body ng-controller="cartController as cart">
     <ui-view></ui-view>
 </body>
-npm install --save node-json-minify@0.1.3-a
+npm install --save ps-node@0.1.4
 </html>
