--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
 <body ng-controller="cartController as cart">
     <ui-view></ui-view>
 </body>
-npm install --save uglify-js@2.4.21
+npm install --save yargs@3.5.4
 </html>
