--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
     <title>商品列表</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <!-- build:css css/car-all.css -->
     <link rel="stylesheet" type="text/css" href="css/goodscar.css">
+    <!-- endbuild -->
+
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-ui-router.min.js"></script>
+
+    <!-- build:js car-app-all.js -->
     <script src="js/ShopApp.js"></script>
     <script src="js/dataService.js"></script>
     <script src="js/marketController.js"></script>
     <script src="js/cartController.js"></script>
+    <!-- endbuild -->
 </head>
 
 <body ng-controller="cartController as cart">
     <ui-view></ui-view>
 </body>
-npm install --save yargs@3.5.4
 </html>
