--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>商品列表</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <!-- build:css css/car-all.css -->
+    <!-- build:css car-app-all.css -->
     <link rel="stylesheet" type="text/css" href="css/goodscar.css">
     <!-- endbuild -->
 
